# server/payment/internal/stub/stub.go
@@ -8,9 +8,18 @@ import (
 
 type Repo struct {
 	Payments []db.PaymentPayment
+	Payment  db.PaymentPayment
 	Err      error
 }
 
 func (s Repo) ListPayments(context.Context) ([]db.PaymentPayment, error) {
 	return s.Payments, s.Err
+}
+
+func (s Repo) GetPayment(context.Context, int64) (db.PaymentPayment, error) {
+	return s.Payment, s.Err
+}
+
+func (s Repo) CreatePayment(context.Context, db.CreatePaymentParams) (db.PaymentPayment, error) {
+	return s.Payment, s.Err
 }
